<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/generic_toolbar_layout"
            android:id="@+id/delivery_address_page_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_name_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:minLines="1"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_name_edit_text"


                    style="@style/styleEditText"

                    android:hint="@string/user_name_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_phone1_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:minLines="1"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_phone1_edit_text"

                    style="@style/styleEditText"
                    android:hint="@string/primary_phone_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_auxPhone_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:minLines="1"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_auxPhone_edit_text"

                    style="@style/styleEditText"
                    android:hint="@string/auxiliary_phone_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_addrln1_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="4"
                    android:lines="3"
                    android:minLines="3"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_addrln1_edit_text"

                    style="@style/styleEditText"
                    android:hint="@string/address_line_1_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_addrln2_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:lines="3"
                    android:minLines="3"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_addrln2_edit_text"

                    style="@style/styleEditText"

                    android:hint="@string/address_line_2_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_addrln3_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:lines="3"
                    android:minLines="3"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_addrln3_edit_text"

                    style="@style/styleEditText"

                    android:hint="@string/address_line_3_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_city_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="2"
                    android:lines="2"
                    android:minLines="1"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_name_city_text"

                    style="@style/styleEditText"


                    android:hint="@string/city_name_hint"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_address_page_zip_til"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/styleTextInputLayout"
                app:errorTextAppearance="@style/error_appearance">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="2"
                    android:lines="2"
                    android:minLines="1"
                    android:gravity="top|start"

                    android:id="@+id/delivery_address_page_name_zip_text"

                    style="@style/styleEditText"


                    android:hint="@string/zip_code_hint"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_location_text"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
        <include
            layout="@layout/view_separator"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
            <Switch
                android:layout_margin="3dp"
                android:foregroundGravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location_text"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:switchPadding="7dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:id="@+id/delivery_address_page_use_current_location_switch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/choose_from_map_text"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"
                />

            <Button
                android:layout_weight="0"
                android:layout_margin="3dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:background="@drawable/maps"
                android:id="@+id/delivery_address_page_select_from_map_button"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center">

                <com.nightonke.boommenu.BoomMenuButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/delivery_address_page_bmb"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pay"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>